src/objects/Sede__c.object
<CustomObject>
    <fields>
        <fullName>ClavePlantelDepende__c</fullName>
        <formula>Plantel__r.IdInterno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClavePlantelDepende</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clave__c</fullName>
        <description>Consecutivo de la Sede</description>
        <externalId>true</externalId>
        <label>Clave</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Nomenclatura__c</fullName>
        <label>Nomenclatura</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nombre del Plantel al que depende</description>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Sede</relationshipLabel>
        <relationshipName>Sede</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sede</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Clave__c</columns>
        <columns>NAME</columns>
        <columns>Nomenclatura__c</columns>
        <columns>Plantel__c</columns>
        <columns>ClavePlantelDepende__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Sede</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sede</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>